--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "frame-ancestors https://*.liveperson.net https://*.liveperson.com; default-src 'self'; script-src 'self' https://lpcdn.lpsnmedia.net; connect-src 'self' https://*.liveperson.net https://*.lpsnmedia.net; img-src 'self' data: https://*.liveperson.net https://*.lpsnmedia.net; style-src 'self' 'unsafe-inline';"
+    Content-Security-Policy = "frame-ancestors https://*.liveperson.net https://*.liveperson.com;"
